[gd_scene load_steps=2 format=2]

[ext_resource path="res://Exercicio S5.gd" type="Script" id=1]

[node name="Exercicio S5" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 47.0
margin_top = 300.0
margin_right = 334.0
margin_bottom = 373.0
text = "Botao 1"

[node name="Button2" type="Button" parent="."]
margin_left = 47.0
margin_top = 401.0
margin_right = 334.0
margin_bottom = 474.0
text = "Botao 2"

[node name="Button3" type="Button" parent="."]
margin_left = 47.0
margin_top = 504.0
margin_right = 334.0
margin_bottom = 577.0
text = "Botao 3"

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 567.0
margin_top = 351.0
margin_right = 789.0
margin_bottom = 435.0
text = "Label1"

[node name="Label2" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 570.0
margin_top = 455.0
margin_right = 792.0
margin_bottom = 539.0
text = "Label2
"

[node name="InsiraNum" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 387.0
margin_top = 62.0
margin_right = 609.0
margin_bottom = 146.0
text = "Insira seu Numero:

"

[node name="InsiraNom" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 72.0
margin_top = 66.0
margin_right = 294.0
margin_bottom = 150.0
text = "Insira Seu Nome:
"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 47.0
margin_top = 118.0
margin_right = 309.0
margin_bottom = 222.0

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 387.0
margin_top = 118.0
margin_right = 649.0
margin_bottom = 222.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
